--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "les18",
+  "name": "WeatherSPA",
   "version": "1.0.0",
   "description": "description",
   "main": "index.js",
   "scripts": {
-    "start": "webpack & http-server -p 3000"
+    "start": "webpack && http-server -p 3000"
   },
   "author": "Leina",
   "license": "ISC",
